<resources>
    <string name="app_name">MeetApp</string>
    <string name="XBtn">X</string>
    <string name="groupName">Group Name</string>
    <string name="ParticipantNames">Participant Names</string>
    <string name="dayRepresentation">Day Representation</string>
    <string name="timeInDayRepresentation">Time In Day Representation</string>
    <string name="leaveGroupTitle">Leave group</string>
    <string name="leaveGroupQuestion">Are you sure you want to leave this group?</string>
    <string name="leaveAnswer">Leave</string>
    <string name="dontLeaveAnswer">No, Stay</string>
    <string name="enterGroupName">Enter group name</string>
    <string name="groupNameHint">Group name here</string>
    <string name="addGroupIcon">Add group Icon</string>
    <string name="createGroupMsg">Create New Group!</string>
    <string name="create">Create!</string>
    <string name="addMemberMsg">Add Member</string>
    <string name="Morning">Morning\n</string>
    <string name="Afternoon">Afternoon\n</string>
    <string name="Evening">Evening\n</string>
    <string name="when_can_you_meet">When can you meet?</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Today">Today</string>
    <string name="groupDetailMsg">Group details</string>
    <string name="resetTimesMsg">Reset time choice</string>
    <string name="leaveGroupMsg">Leave group</string>
    <string name="resetEmptySelection">No selection to reset</string>
    <string name="noTimeSlotsSelected">No time slots selected</string>
    <string name="newGroupCreated">New group created successfully!</string>
    <string name="groupNameExists">The name you chose already exists!</string>
    <string name="InvalidEmailOrPassword">Invalid email or password</string>
    <string name="Login">Login</string>
    <string name="EnterYourEmailAddress">Enter your email address</string>
    <string name="EnterYourPassword">Enter your password</string>
    <string name="NotRegistered">Not registered?</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="PasswordsDoNotMatch">Passwords do not match</string>
    <string name="EmailAlreadyExists">This email address is already in use by another account, Use another email</string>
    <string name="GeneralRegistrationError">There was an error to register you with these credentials, Try another ones</string>
    <string name="Register">Register</string>
    <string name="EnterYourName">Enter your name</string>
    <string name="ReEnterYourPassword">Re-enter your password</string>
    <string name="logout">Logout</string>
    <string name="profile">My Profile</string>
    <string name="logoutQuestion">Are you sure you want to logout?</string>
    <string name="logoutDialogTitle">Logout?</string>
    <string name="logoutAnswer">Logout</string>
    <string name="InvalidEmailAddress">Invalid email address</string>
    <string name="Suggestions">Suggestions:</string>
    <string name="pressAgainToExitMsg">Press once again to exit!</string>
    <string name="timeSlotStringFormat">%s%s %s - %d/%d</string>
</resources>
