<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/calendar_login"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/meetapp_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#a4ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/enterEmailInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/EnterYourEmailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/blueDark"
                android:textColorHint="@color/colorGreen" />

            <EditText
                android:id="@+id/enterPasswordInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/EnterYourPassword"
                android:inputType="textPassword"
                android:textColor="@color/blueDark"
                android:textColorHint="@color/colorGreen" />

            <TextView
                android:id="@+id/InvalidEmailOrPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/InvalidEmailOrPassword"
                android:textAlignment="center"
                android:textColor="@color/colorRed"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/disabled_button_background"
                android:fontFamily="@font/poppins_light"
                android:text="@string/Login"
                android:textColor="@color/blueDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/NotRegistered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/NotRegistered"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/registerNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:fontFamily="@font/poppins_light"
                android:text="@string/SignUp"
                android:textAlignment="center"
                android:textColor="@color/colorGreen"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="429dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>