<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".GroupActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="368dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:text="Group1"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/calendarView"
        android:layout_width="368dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:layoutDirection="ltr"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196">

        <LinearLayout
            android:id="@+id/calendarDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/day1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d0m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="0"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d0a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="0"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d0e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="0"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 2"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d1m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="1"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="1"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d1e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="1"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 3"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d2m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="2"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d2a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="2"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d2e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="2"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 4"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d3m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="3"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="3"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d3e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="3"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 5"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d4m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="4"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="4"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d4e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="4"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 6"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d5m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="5"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d5a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="5"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d5e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="5"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day 7"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/d6m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="6"
                    android:text="@string/Morning"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d6a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:minHeight="80dp"
                    android:tag="6"
                    android:text="@string/Afternoon"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/d6e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/evening_border"
                    android:minHeight="80dp"
                    android:tag="6"
                    android:text="@string/Evening"
                    android:textAlignment="center"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/selectionDisplay"
        android:layout_width="368dp"
        android:layout_height="192dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
